--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ header {
     border-bottom: solid 1px rgb(245, 180, 0);
     display: flex;
     justify-content: space-between;
-    background-color: rgb(179, 179, 179);
+    background-color: rgb(150, 150, 150);
     z-index: 10;
 }
 
@@ -63,7 +63,7 @@ nav li {
 
 .banner {
     background-color: rgb(245, 180, 0);
-    height: 13rem;
+    height: 35rem;
     width: 100%;
 }
 
@@ -71,9 +71,74 @@ nav li {
     display: flex;
     align-items: center;
     width: 100%;
+    text-align: center;
+}
+
+.banner-title {
+    flex-direction: column;
+    background-color: rgb(245, 180, 0);
+    padding: 3rem;
+    width: 70%;
+    margin: auto 8%;
+    border: solid 8px black;
+    border-radius: 10px;
+    font-size: x-large;
 }
 
 .banner-head {
-    height: 10rem;
-    background-color: rgb(179, 179, 179);
+    height: 90%;
+    background-image: url(./Resources/Images/BannerBuild.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.reserve {
+    background-color: rgb(150, 150, 150);
+    border-radius: 15px;
+    border: dashed 4px black;
+    padding: 1rem;
+    margin: 2rem;
+}
+
+.reserve span {
+    font-size: larger;
+}
+
+.reserve .button {
+    text-align: center;
+    font-size: xx-large;
+    width: 60%;
+    margin: 1rem auto;
+    border: solid 0.125rem black;
+    border-radius: 5px;
+    background-color: rgb(245, 180, 0);
+    box-shadow: 1px 1px rgb(245, 180, 0);
+}
+
+
+
+/* PRODUCTS SECTION */
+
+#products {
+    background-color: rgb(150, 150, 150);
+}
+
+#brands {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.brand-logo {
+    width: 30%;
+    justify-content: space-around;
+    
+}
+
+.brand-logo img {
+    max-width: 70%;
+    max-height: 250px;
+    padding: 0% 15%;
 }
